# treeviz

./: .gitignore  README.md  setup_env.sh  verify_script.py
.github/workflows/: ci.yml
backend/: .cache.sqlite  .elevation_cache.sqlite  .env  .osm_cache.sqlite  README.md  failed_matches.json  pyproject.toml  top_50_species.json
backend/scripts/: decode_tile_debug.py  smoke_ofm.py
backend/src/foliage/: database.py  export_failed.py  export_top_species.py  fetch_weather_year.py  fetchers.py  ingest_trees.py  init_weather_grid.py  inspect_data.py  load_species.py  main.py  migrate_add_tree_metadata.py  migrate_schema.py  models.py  phenology.py  phenology_api.py  phenology_traits.json  populate_traits.py  populate_tree_metadata.py  precompute_atlases.py  query_tree_extents.py  registry.py  report_species.py  test_adjustments.py  verify_implementation.py  verify_phenology.py  weather.py  weather_api.py  weather_fetch.py  weather_grid.py
backend/src/foliage/models/: _example_pheno_model_norway_maple.py  _example_pheno_model_norway_maple_vectorized.py  example_pheno_models.py
backend/src/foliage/phenology/: adjustment_traits.py  adjustments.py  base.py  compute.py  factory.py
backend/src/foliage/phenology/species/: callery_pear.py  cherry_plum.py  douglas_fir.py  european_hornbeam.py  european_white_birch.py  flowering_dogwood.py  honeylocust.py  japanese_flowering_cherry.py  japanese_maple.py  littleleaf_linden.py  norway_maple.py  oregon_ash.py  red_oak.py  smooth_hawthorn.py  sweetgum.py
backend/tests/: test_phenology.py
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: app.spec.ts
frontend/src/: main.ts  store.ts
frontend/tests/: app-root.test.ts  setup.ts  (+3 more)
verification/: verify_map.py
(+5 files in other folders)
